// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yarn-workspace-sync-deps 1`] = `
"{
  \\"name\\": \\"test-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"redux\\": \\"2\\",
    \\"test-package2\\": \\"1.0.0\\"
  }
}
"
`;

exports[`yarn-workspace-sync-deps 2`] = `
"{
  \\"name\\": \\"test2-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"lodash\\": \\"3\\"
  }
}
"
`;

exports[`yarn-workspace-sync-deps 3`] = `
"{
  \\"name\\": \\"test3-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"lodash\\": \\"3\\",
    \\"koa\\": \\"^2.2.0\\"
  },
  \\"devDependencies\\": {
    \\"lodash\\": \\"1\\"
  }
}
"
`;

exports[`yarn-workspace-sync-deps 4`] = `
"{
  \\"name\\": \\"test-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"redux\\": \\"^4.0.0\\",
    \\"test-package2\\": \\"1.0.0\\"
  }
}
"
`;

exports[`yarn-workspace-sync-deps 5`] = `
"{
  \\"name\\": \\"test2-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"lodash\\": \\"^4.17.10\\"
  }
}
"
`;

exports[`yarn-workspace-sync-deps 6`] = `
"{
  \\"name\\": \\"test3-package1\\",
  \\"version\\": \\"1.0.0\\",
  \\"main\\": \\"index.js\\",
  \\"license\\": \\"MIT\\",
  \\"dependencies\\": {
    \\"lodash\\": \\"^4.17.10\\",
    \\"koa\\": \\"^2.2.0\\"
  },
  \\"devDependencies\\": {
    \\"lodash\\": \\"^4.17.10\\"
  }
}
"
`;
